--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
     /* margin-right: -50%; */
     transform: translate(-50%, -50%);
     width: 15%;
-    border-radius: 10%
+    border-radius: 10%;
 " src="https://scontent.fsgn8-2.fna.fbcdn.net/v/t1.6435-9/178195178_1803117959894943_82886299988102260_n.jpg?_nc_cat=100&amp;ccb=1-7&amp;_nc_sid=09cbfe&amp;_nc_ohc=iuPKxHolA_wAX87o778&amp;_nc_ht=scontent.fsgn8-2.fna&amp;oh=00_AfAV4Vv8n_JCOQYYe8N0v1JUl7CGmgcICNJ8xjrot_WZfQ&amp;oe=639D0C4C">
     <canvas id="pinkboard" width="980" height="1669"></canvas>
     <script>
