--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
     transform: translate(-50%, -50%);
     width: 15%;
     border-radius: 10%;
-" src="https://scontent.fsgn8-2.fna.fbcdn.net/v/t1.6435-9/178195178_1803117959894943_82886299988102260_n.jpg?_nc_cat=100&amp;ccb=1-7&amp;_nc_sid=09cbfe&amp;_nc_ohc=iuPKxHolA_wAX87o778&amp;_nc_ht=scontent.fsgn8-2.fna&amp;oh=00_AfAV4Vv8n_JCOQYYe8N0v1JUl7CGmgcICNJ8xjrot_WZfQ&amp;oe=639D0C4C">
+" src="https://scontent.fsgn2-5.fna.fbcdn.net/v/t39.30808-1/313418961_670589284578284_4170948707447908457_n.jpg?stp=dst-jpg_p480x480&_nc_cat=106&ccb=1-7&_nc_sid=7206a8&_nc_ohc=3KtKgrhudVkAX8utlDD&_nc_ht=scontent.fsgn2-5.fna&oh=00_AfCnZuriP9JS--SmRL2H5oV0_RdY62eDCAQDylTZUCFxQg&oe=637AA81A">
     <canvas id="pinkboard" width="980" height="1669"></canvas>
     <script>
       /*
