--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta name="Author" content="">
     <meta name="Keywords" content="">
     <meta name="Description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <style>
       html,
       body {
@@ -203,6 +205,17 @@
     width: 110px;
     height: 36px;
 }
+  @media only screen and (max-width: 768px) {
+    .center-screen{
+      width: 30vh;
+    }
+  }
+  
+  @media only screen and (min-width: 768px) {
+    .center-screen{
+      width: 20vh;
+    }
+  }
 </style></head>
   <body>
      <img class="center-screen" style="
