--- a/index.html
+++ b/index.html
@@ -206,19 +206,19 @@
     height: 36px;
 }
   @media only screen and (max-width: 768px) {
-    .center-screen{
+    .center-screen-1{
       width: 30vh;
     }
   }
   
   @media only screen and (min-width: 768px) {
-    .center-screen{
+    .center-screen-1{
       width: 20vh;
     }
   }
 </style></head>
   <body>
-     <img class="center-screen" style="
+     <img class="center-screen-1" style="
     background: red;
     /* display: flex; */
     /* justify-content: center; */
@@ -231,7 +231,6 @@
     left: 50%;
     /* margin-right: -50%; */
     transform: translate(-50%, -50%);
-    width: 16vh;
     border-radius: 10%;
 " src="https://scontent.fsgn2-5.fna.fbcdn.net/v/t39.30808-1/313418961_670589284578284_4170948707447908457_n.jpg?stp=dst-jpg_p480x480&_nc_cat=106&ccb=1-7&_nc_sid=7206a8&_nc_ohc=3KtKgrhudVkAX8utlDD&_nc_ht=scontent.fsgn2-5.fna&oh=00_AfCnZuriP9JS--SmRL2H5oV0_RdY62eDCAQDylTZUCFxQg&oe=637AA81A">
     <canvas id="pinkboard" width="980" height="1669"></canvas>
