--- a/index1.html
+++ b/index1.html
@@ -6,6 +6,8 @@
     <meta name="Author" content="" />
     <meta name="Keywords" content="" />
     <meta name="Description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <style>
       html,
       body {
@@ -19,6 +21,18 @@
         width: 100%;
         height: 100%;
       }
+      
+      @media only screen and (max-width: 768px) {
+        .center-screen-1{
+          width: 30vh;
+        }
+      }
+
+    @media only screen and (min-width: 768px) {
+      .center-screen-1{
+        width: 20vh;
+      }
+    }
     </style>
   </head>
   <body>
