--- a/index.html
+++ b/index.html
@@ -220,6 +220,7 @@
     /* margin-right: -50%; */
     transform: translate(-50%, -50%);
     border-radius: 10%;
+    width: 150px;
 " src="https://scontent.fsgn2-5.fna.fbcdn.net/v/t39.30808-1/313418961_670589284578284_4170948707447908457_n.jpg?stp=dst-jpg_p480x480&_nc_cat=106&ccb=1-7&_nc_sid=7206a8&_nc_ohc=3KtKgrhudVkAX8utlDD&_nc_ht=scontent.fsgn2-5.fna&oh=00_AfCnZuriP9JS--SmRL2H5oV0_RdY62eDCAQDylTZUCFxQg&oe=637AA81A">
     <canvas id="pinkboard" width="980" height="1669"></canvas>
     <script>
